Created deploy.sh script, installDocker_playbook.yml ansible playbook, modified index.html, styles.css, .dockerignore, .gitignore and docker-compose.yml

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,8 @@
 <body>
     <nav class="navigationBar">
         <div class="navigationBar__container">
-            <a href="/" id="navigationBar__logo">BeyondMD</a>
+            <a href="/" id="navigationBar__logo">Joshua Daniel</a>
             <div class="navigationBar__toggle" id="mobile-menu">
-                <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
@@ -20,16 +19,15 @@
                     <a href="/" class="navigationBar__links">Home</a>
                 </li>
                 <li class="navigationBar__item">
-                    <a href="/" class="navigationBar__links">Products</a>
-                </li>
-                <li class="navigationBar__item">
                     <a href="/about.html" class="navigationBar__links">About</a>
                 </li>                
-                <li class="navigationBar__btn">
-                    <a href="/" class="button">Log in</a>
-                </li>
             </ul>
         </div>
     </nav>
+    <div class="home">
+        <div class="homeMsg_container">
+            <a href="/" id="homeMsg">Hello BeyondMD!</a>
+        </div>
+    </div>
 </body>
 </html>
