Added comments and ignored some things

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BeyondMD</title>
+    <title>Hello BeyondMD!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navigationBar">
         <div class="navigationBar__container">
-            <a href="/" id="navigationBar__logo">Joshua Daniel</a>
+            <a href="/" id="navigationBar__logo">Welcome!</a>
             <div class="navigationBar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -25,8 +25,8 @@
         </div>
     </nav>
     <div class="home">
-        <div class="homeMsg_container">
-            <a href="/" id="homeMsg">Hello BeyondMD!</a>
+        <div class="homeMsg__container">
+            <a href="/" class="homeMsg__links">Hello BeyondMD!</a>
         </div>
     </div>
 </body>
